--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,20 @@
 version: '3.8'
 
 services:
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: camerrideshare_api
+    ports:
+      - "3000:3000"
+    environment:
+      DATABASE_URL: "postgresql://postgres:0901@postgres:5432/camerrideshare?schema=public"
+    depends_on:
+      - postgres
+    networks:
+      - camerrideshare-net
+
   postgres:
     image: postgres:17
     container_name: camerrideshare_db
@@ -15,9 +29,9 @@ services:
     networks:
       - camerrideshare-net
 
-
 volumes:
   postgres_data:
+
 
 networks:
   camerrideshare-net:
